[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/art/png/enemies/lavaSlime_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/art/png/enemies/lavaSlime_walk.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/lavaSlime.gd" type="Script" id=3]
[ext_resource path="res://assets/art/png/enemies/lavaSlime_dead.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/bfxr_sounds/Randomize4.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/bfxr_sounds/Randomize2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/bfxr_sounds/Jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/bfxr_sounds/Explosion.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.5, 46 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.0
height = 108.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 110, 43 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.486275 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 0, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.103825, 0.304703 ),
"transitions": PoolRealArray( 1, 0.210224, 0.225313 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.101788, 0.302666 ),
"transitions": PoolRealArray( 1, 0.217638, 0.267943 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 5, 2 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1e-05, 3.05176e-05, 1e-05, 8.93604e-05, 1e-05 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.486275 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.486275 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="lavaSlime" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 256
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21.3333 )
shape = SubResource( 2 )

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( 0, -53 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="sideChecker" type="Area2D" parent="."]
collision_layer = 256
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sideChecker"]
position = Vector2( 1, 21 )
shape = SubResource( 4 )

[node name="sightLine" type="RayCast2D" parent="."]
position = Vector2( 0, 21.3333 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, -250 )

[node name="sightLine2" type="RayCast2D" parent="."]
position = Vector2( 0, -96 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, -250 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/dead = SubResource( 7 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 8 )

[node name="soundDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 3.0

[node name="soundFireball" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
pitch_scale = 1.5

[node name="soundDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.7

[node name="soundAngery" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="body_entered" from="sideChecker" to="." method="_on_sideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
